# coruscant

./: .gitignore  LICENSE  README.md
.github/workflows/: check-and-lint.yml  ci.yml
docs/: search-index.js  settings.html
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/simple_raft/: all.html  index.html
docs/simple_raft/core/: fn.quorum_size.html  index.html  struct.RaftState.html  struct.ReplicationState.html
docs/simple_raft/log/: index.html  struct.CommittedIter.html  trait.RaftLog.html
docs/simple_raft/message/: enum.RaftMessageDestination.html  enum.Rpc.html  index.html  struct.AppendRequest.html  struct.AppendResponse.html  struct.LogEntry.html  struct.LogIndex.html  struct.RaftMessage.html  struct.SendableRaftMessage.html  struct.TermId.html  struct.VoteRequest.html  struct.VoteResponse.html
docs/simple_raft/node/: enum.AppendError.html  index.html  struct.RaftConfig.html  struct.RaftNode.html
docs/src/simple_raft/: core.rs.html  lib.rs.html  log.rs.html  macros.rs.html  message.rs.html  node.rs.html  prelude.rs.html
examples/: custom_layer.rs
subscriber/: Cargo.toml  README.md  dependency_summary.jsons
subscriber/examples/: simple_trace.rs
subscriber/scripts/: analyze.py  display_all.sh
subscriber/src/: bernoulli.rs  custom_layer.rs  dependency.rs  dummy.rs  lib.rs  markov.rs  normal.rs  processor.rs  record.rs
(+17 files in other folders)
