[package]
name = "coruscant_subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chashmap = "2.2.2"
env_logger = "0.9.0"
rand = "0.8.5"
log = "0.4.16"
tracing = "0.1.33"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.11"