[package]
name = "coruscant_subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chashmap = "2.2.2"
env_logger = "0.9.0"
log = "0.4.16"
rand = "0.8.5"
tokio = { version = "1.18.1", features = [ "time" ] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
tracing = "0.1.33"
tracing-subscriber = "0.3.11"
